skupovi/bison/parser.output
Grammar

    0 $accept: program $end

    1 program: naredba ';' program
    2        | naredba ';'

    3 naredba: ID '=' izraz
    4        | PRINT_T izraz
    5        | CHECK provera
    6        | CARD izraz
    7        | DOMEN '=' izraz

    8 provera: BROJ ':' izraz
    9        | izraz '<' izraz

   10 izraz: skup
   11      | interval
   12      | ID
   13      | izraz UNIJA izraz
   14      | izraz PRESEK izraz
   15      | izraz RAZLIKA izraz
   16      | '(' izraz ')'
   17      | '~' izraz

   18 skup: '{' lista '}'

   19 interval: BROJ DO BROJ

   20 lista: BROJ ',' lista
   21      | BROJ


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16
    ')' (41) 16
    ',' (44) 20
    ':' (58) 8
    ';' (59) 1 2
    '<' (60) 9
    '=' (61) 3 7
    '{' (123) 18
    '}' (125) 18
    '~' (126) 17
    error (256)
    BROJ (258) 8 19 20 21
    UNIJA (259) 13
    PRESEK (260) 14
    RAZLIKA (261) 15
    PRINT_T (262) 4
    ID (263) 3 12
    DO (264) 19
    CHECK (265) 5
    CARD (266) 6
    DOMEN (267) 7


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    program (24)
        on left: 1 2
        on right: 0 1
    naredba (25)
        on left: 3 4 5 6 7
        on right: 1 2
    provera (26)
        on left: 8 9
        on right: 5
    izraz (27)
        on left: 10 11 12 13 14 15 16 17
        on right: 3 4 6 7 8 9 13 14 15 16 17
    skup (28)
        on left: 18
        on right: 10
    interval (29)
        on left: 19
        on right: 11
    lista (30)
        on left: 20 21
        on right: 18 20


State 0

    0 $accept: • program $end

    PRINT_T  shift, and go to state 1
    ID       shift, and go to state 2
    CHECK    shift, and go to state 3
    CARD     shift, and go to state 4
    DOMEN    shift, and go to state 5

    program  go to state 6
    naredba  go to state 7


State 1

    4 naredba: PRINT_T • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 13
    skup      go to state 14
    interval  go to state 15


State 2

    3 naredba: ID • '=' izraz

    '='  shift, and go to state 16


State 3

    5 naredba: CHECK • provera

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 17
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    provera   go to state 18
    izraz     go to state 19
    skup      go to state 14
    interval  go to state 15


State 4

    6 naredba: CARD • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 20
    skup      go to state 14
    interval  go to state 15


State 5

    7 naredba: DOMEN • '=' izraz

    '='  shift, and go to state 21


State 6

    0 $accept: program • $end

    $end  shift, and go to state 22


State 7

    1 program: naredba • ';' program
    2        | naredba • ';'

    ';'  shift, and go to state 23


State 8

   17 izraz: '~' • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 24
    skup      go to state 14
    interval  go to state 15


State 9

   19 interval: BROJ • DO BROJ

    DO  shift, and go to state 25


State 10

   12 izraz: ID •

    $default  reduce using rule 12 (izraz)


State 11

   16 izraz: '(' • izraz ')'

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 26
    skup      go to state 14
    interval  go to state 15


State 12

   18 skup: '{' • lista '}'

    BROJ  shift, and go to state 27

    lista  go to state 28


State 13

    4 naredba: PRINT_T izraz •
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 4 (naredba)


State 14

   10 izraz: skup •

    $default  reduce using rule 10 (izraz)


State 15

   11 izraz: interval •

    $default  reduce using rule 11 (izraz)


State 16

    3 naredba: ID '=' • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 32
    skup      go to state 14
    interval  go to state 15


State 17

    8 provera: BROJ • ':' izraz
   19 interval: BROJ • DO BROJ

    DO   shift, and go to state 25
    ':'  shift, and go to state 33


State 18

    5 naredba: CHECK provera •

    $default  reduce using rule 5 (naredba)


State 19

    9 provera: izraz • '<' izraz
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31
    '<'      shift, and go to state 34


State 20

    6 naredba: CARD izraz •
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 6 (naredba)


State 21

    7 naredba: DOMEN '=' • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 35
    skup      go to state 14
    interval  go to state 15


State 22

    0 $accept: program $end •

    $default  accept


State 23

    1 program: naredba ';' • program
    2        | naredba ';' •

    PRINT_T  shift, and go to state 1
    ID       shift, and go to state 2
    CHECK    shift, and go to state 3
    CARD     shift, and go to state 4
    DOMEN    shift, and go to state 5

    $default  reduce using rule 2 (program)

    program  go to state 36
    naredba  go to state 7


State 24

   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz
   17      | '~' izraz •

    $default  reduce using rule 17 (izraz)


State 25

   19 interval: BROJ DO • BROJ

    BROJ  shift, and go to state 37


State 26

   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz
   16      | '(' izraz • ')'

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31
    ')'      shift, and go to state 38


State 27

   20 lista: BROJ • ',' lista
   21      | BROJ •

    ','  shift, and go to state 39

    $default  reduce using rule 21 (lista)


State 28

   18 skup: '{' lista • '}'

    '}'  shift, and go to state 40


State 29

   13 izraz: izraz UNIJA • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 41
    skup      go to state 14
    interval  go to state 15


State 30

   14 izraz: izraz PRESEK • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 42
    skup      go to state 14
    interval  go to state 15


State 31

   15 izraz: izraz RAZLIKA • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 43
    skup      go to state 14
    interval  go to state 15


State 32

    3 naredba: ID '=' izraz •
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 3 (naredba)


State 33

    8 provera: BROJ ':' • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 44
    skup      go to state 14
    interval  go to state 15


State 34

    9 provera: izraz '<' • izraz

    '~'   shift, and go to state 8
    BROJ  shift, and go to state 9
    ID    shift, and go to state 10
    '('   shift, and go to state 11
    '{'   shift, and go to state 12

    izraz     go to state 45
    skup      go to state 14
    interval  go to state 15


State 35

    7 naredba: DOMEN '=' izraz •
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 7 (naredba)


State 36

    1 program: naredba ';' program •

    $default  reduce using rule 1 (program)


State 37

   19 interval: BROJ DO BROJ •

    $default  reduce using rule 19 (interval)


State 38

   16 izraz: '(' izraz ')' •

    $default  reduce using rule 16 (izraz)


State 39

   20 lista: BROJ ',' • lista

    BROJ  shift, and go to state 27

    lista  go to state 46


State 40

   18 skup: '{' lista '}' •

    $default  reduce using rule 18 (skup)


State 41

   13 izraz: izraz • UNIJA izraz
   13      | izraz UNIJA izraz •
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 13 (izraz)


State 42

   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   14      | izraz PRESEK izraz •
   15      | izraz • RAZLIKA izraz

    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 14 (izraz)


State 43

   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz
   15      | izraz RAZLIKA izraz •

    $default  reduce using rule 15 (izraz)


State 44

    8 provera: BROJ ':' izraz •
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 8 (provera)


State 45

    9 provera: izraz '<' izraz •
   13 izraz: izraz • UNIJA izraz
   14      | izraz • PRESEK izraz
   15      | izraz • RAZLIKA izraz

    UNIJA    shift, and go to state 29
    PRESEK   shift, and go to state 30
    RAZLIKA  shift, and go to state 31

    $default  reduce using rule 9 (provera)


State 46

   20 lista: BROJ ',' lista •

    $default  reduce using rule 20 (lista)
